--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,12 @@
         "optimistdigital/nova-translatable": "^1.10",
         "orlyapps/nova-belongsto-depend": "*",
         "pishran/nova-rtl-theme": "^1.5",
+        "sheets/year-to-date": "*",
         "spatie/laravel-permission": "^5.1",
         "spatie/laravel-translatable": "^4.6",
         "spatie/laravel-translation-loader": "^2.7",
         "vink/nova-cache-card": "^1.0",
-        "sheets/year-to-date": "*"
+        "yazan/laravel-datatable": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
