--- a/nova-components/YearToDate/package.json
+++ b/nova-components/YearToDate/package.json
@@ -18,7 +18,8 @@
         "sass-loader": "7.*"
     },
     "dependencies": {
-        "vue": "^2.5.0",
-        "vue2-datatable-component": "^2.3.1"
+        "bootstrap": "^4.5.0",
+        "bootstrap-vue": "^2.15.0",
+        "vue": "^2.5.0"
     }
 }
