--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,13 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/Nunito.css": "/css/Nunito.css",
     "/css/login.css": "/css/login.css",
     "/css/custom-ltr.css": "/css/custom-ltr.css",
+    "/css/my_app.css": "/css/my_app.css",
     "/css/sidebar-icons.css": "/css/sidebar-icons.css",
     "/css/custom-rtl.css": "/css/custom-rtl.css",
     "/css/app.css": "/css/app.css",
+    "/css/Nunito.css": "/css/Nunito.css",
+    "/js/global.js": "/js/global.js",
     "/js/triggers.js": "/js/triggers.js",
     "/js/helpers.js": "/js/helpers.js",
     "/js/globalEventListener.js": "/js/globalEventListener.js",
