--- a/nova-components/CompanyReportYTD/package.json
+++ b/nova-components/CompanyReportYTD/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "bootstrap": "^4.5.0",
         "bootstrap-vue": "^2.15.0",
-        "vue": "^2.5.0"
+        "vue": "^2.5.0",
+        "vue-single-select": "^1.1.0"
     }
 }
