--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -33,10 +33,10 @@
     "/fonts/29Azer.ttf": "/fonts/29Azer.ttf",
     "/fonts/GESST.otf": "/fonts/GESST.otf",
     "/fonts/Gotham.otf": "/fonts/Gotham.otf",
-    "/fonts/FontAwesome.otf": "/fonts/FontAwesome.otf",
     "/fonts/fontawesome-webfont.eot": "/fonts/fontawesome-webfont.eot",
     "/fonts/fontawesome-webfont.svg": "/fonts/fontawesome-webfont.svg",
     "/fonts/fontawesome-webfont.ttf": "/fonts/fontawesome-webfont.ttf",
     "/fonts/fontawesome-webfont.woff": "/fonts/fontawesome-webfont.woff",
-    "/fonts/fontawesome-webfont.woff2": "/fonts/fontawesome-webfont.woff2"
+    "/fonts/fontawesome-webfont.woff2": "/fonts/fontawesome-webfont.woff2",
+    "/fonts/FontAwesome.otf": "/fonts/FontAwesome.otf"
 }
